--- a/app/src/main/res/layout/activity_register_new.xml
+++ b/app/src/main/res/layout/activity_register_new.xml
@@ -8,21 +8,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".SignupActivity">
+    android:background="@color/WhiteLime"
+    tools:context=".SignUpActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="36dp"
-        app:cardCornerRadius="30dp"
+        app:cardCornerRadius="36dp"
         app:cardElevation="20dp">
-        
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center_horizontal"
-            android:background="@drawable/lavender_border">
+            android:background="@drawable/lime_border">
 
             <TextView
                 android:layout_width="match_parent"
@@ -31,38 +32,38 @@
                 android:textSize="36dp"
                 android:textAlignment="center"
                 android:textStyle="bold"
-                android:textColor="@color/Lavender"/>
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:id="@+id/signup_name"
-                    android:background="@drawable/lavender_border"
-                    android:layout_marginTop="40dp"
-                    android:padding="8dp"
-                    android:hint="Name"
-                    android:drawableLeft="@drawable/baseline_person_24"
-                    android:drawablePadding="8dp"
-                    android:textColor="@color/black"/>
+                android:textColor="@color/Lime"/>
 
             <EditText
-                android:layout_width="match_parent"
+                android:layout_width="312dp"
                 android:layout_height="50dp"
-                android:id="@+id/signup_email"
-                android:background="@drawable/lavender_border"
-                android:layout_marginTop="40dp"
+                android:id="@+id/text_login_name"
+                android:background="@drawable/lime_border"
+                android:layout_marginTop="30dp"
                 android:padding="8dp"
-                android:hint="Email"
-                android:drawableLeft="@drawable/baseline_email_24"
+                android:hint="Name"
+                android:drawableLeft="@drawable/baseline_person_24"
                 android:drawablePadding="8dp"
                 android:textColor="@color/black"/>
 
             <EditText
-                android:layout_width="match_parent"
+                android:id="@+id/text_email"
+                android:layout_width="312dp"
                 android:layout_height="50dp"
-                android:id="@+id/signup_username"
-                android:background="@drawable/lavender_border"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/lime_border"
+                android:drawableLeft="@drawable/baseline_email_24"
+                android:drawablePadding="8dp"
+                android:hint="Email"
+                android:padding="8dp"
+                android:textColor="@color/black" />
+
+            <EditText
+                android:layout_width="312dp"
+                android:layout_height="50dp"
+                android:id="@+id/text_username"
+                android:background="@drawable/lime_border"
+                android:layout_marginTop="10dp"
                 android:padding="8dp"
                 android:hint="Username"
                 android:drawableLeft="@drawable/baseline_account_circle_24"
@@ -70,11 +71,11 @@
                 android:textColor="@color/black"/>
 
             <EditText
-                android:layout_width="match_parent"
+                android:layout_width="312dp"
                 android:layout_height="50dp"
-                android:id="@+id/signup_password"
-                android:background="@drawable/lavender_border"
-                android:layout_marginTop="40dp"
+                android:id="@+id/text_registerpassword"
+                android:background="@drawable/lime_border"
+                android:layout_marginTop="10dp"
                 android:padding="8dp"
                 android:hint="Password"
                 android:inputType="textPassword"
@@ -83,11 +84,11 @@
                 android:textColor="@color/black"/>
 
             <Button
-                android:id="@+id/signup_button"
-                android:layout_width="match_parent"
+                android:id="@+id/registerclick"
+                android:layout_width="312dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="50dp"
-                android:backgroundTint="#8692f7"
+                android:backgroundTint="#74c69d"
                 android:text="Sign Up!"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
@@ -95,18 +96,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/loginredirect"
+                android:id="@+id/redirect_to_log"
                 android:text="Alredy a user? Log in!"
                 android:layout_gravity="center"
                 android:padding="8dp"
                 android:layout_margin="10dp"
                 android:textSize="18sp"
-                android:textColor="@color/Lavender"/>
+                android:textColor="@color/Lime"/>
 
 
 
 
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
 </LinearLayout>
