--- a/app/src/main/res/layout/activity_login_new.xml
+++ b/app/src/main/res/layout/activity_login_new.xml
@@ -71,7 +71,7 @@
                 app:cornerRadius="20dp" />
 
             <TextView
-                android:id="@+id/reditect_to_reg"
+                android:id="@+id/redirect_to_reg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
