--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,4 +8,13 @@
     </style>
 
     <style name="Theme.K" parent="Base.Theme.K" />
+
+    <style name="Theme.K.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.K.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.K.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
