--- a/app/src/main/res/layout/activity_personalization.xml
+++ b/app/src/main/res/layout/activity_personalization.xml
@@ -6,100 +6,123 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PersonalizationActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="@color/Bright_blue"
+        tools:context=".SignInActivity">>
 
-    <TextView
-        android:id="@+id/PersonalizationText"
-        android:layout_width="278dp"
-        android:layout_height="32dp"
-        android:text="Personalize your account!"
-        android:textAlignment="center"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/countryAutoComplete"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.807" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="408dp"
+            android:background="@drawable/lime_border"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/PersDoneButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Done"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/PersonalizationText"
-        app:layout_constraintVertical_bias="0.532" />
+            <TextView
+                android:id="@+id/PersonalizationText"
+                android:layout_width="278dp"
+                android:layout_height="32dp"
+                android:layout_marginTop="51dp"
+                android:text="Personalize your account!"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toTopOf="@+id/countryAutoComplete"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.496"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.807" />
 
-    <TextView
-        android:id="@+id/CountryText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Country: "
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.123"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.228" />
+            <TextView
+                android:id="@+id/CountryText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="Country: "
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.123"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.228" />
 
-    <TextView
-        android:id="@+id/ActivityText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Activities: "
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.126"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CountryText"
-        app:layout_constraintVertical_bias="0.04" />
+            <AutoCompleteTextView
+                android:id="@+id/countryAutoComplete"
+                android:layout_width="165dp"
+                android:layout_height="52dp"
+                android:layout_marginTop="1dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.157"
+                app:layout_constraintStart_toEndOf="@+id/CountryText"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.238" />
 
-    <TextView
-        android:id="@+id/HobbyText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hobby: "
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.143"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ActivityText"
-        app:layout_constraintVertical_bias="0.148" />
+            <TextView
+                android:id="@+id/ActivityText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:text="Activities: "
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.126"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/CountryText"
+                app:layout_constraintVertical_bias="0.04" />
 
-    <AutoCompleteTextView
-        android:id="@+id/countryAutoComplete"
-        android:layout_width="165dp"
-        android:layout_height="52dp"
+            <AutoCompleteTextView
+                android:id="@+id/activityAutoComplete"
+                android:layout_width="165dp"
+                android:layout_height="52dp"
+                android:layout_marginTop="1dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.157"
+                app:layout_constraintStart_toEndOf="@+id/CountryText"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.238" />
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.157"
-        app:layout_constraintStart_toEndOf="@+id/CountryText"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.238" />
+            <TextView
+                android:id="@+id/HobbyText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hobby: "
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.143"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ActivityText"
+                app:layout_constraintVertical_bias="0.148" />
 
-    <AutoCompleteTextView
-        android:id="@+id/activityAutoComplete"
-        android:layout_width="165dp"
-        android:layout_height="52dp"
+            <AutoCompleteTextView
+                android:id="@+id/hobbyAutoComplete"
+                android:layout_width="165dp"
+                android:layout_height="52dp"
+                android:layout_marginTop="1dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.157"
+                app:layout_constraintStart_toEndOf="@+id/CountryText"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.238" />
 
-        android:layout_marginTop="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/countryAutoComplete" />
-
-    <AutoCompleteTextView
-        android:id="@+id/hobbyAutoComplete"
-        android:layout_width="165dp"
-        android:layout_height="52dp"
-        app:layout_constraintBottom_toTopOf="@+id/PersDoneButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activityAutoComplete"
-        app:layout_constraintVertical_bias="0.309" />
+            <Button
+                android:id="@+id/PersDoneButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="Done"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/PersonalizationText"
+                app:layout_constraintVertical_bias="0.532" />
+        </LinearLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
