--- a/app/src/main/res/layout/activity_calendar_view.xml
+++ b/app/src/main/res/layout/activity_calendar_view.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CalendarView">
 
-    <!--text view for displaying the selected date-->
     <TextView
         android:id="@+id/idTVDate"
         android:layout_width="match_parent"
@@ -19,7 +19,6 @@
         android:textSize="20sp"
         android:textStyle="bold" />
 
-    <!-- Add CalendarView to display the Calendar -->
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
