--- a/app/src/main/res/layout/activity_side_menu.xml
+++ b/app/src/main/res/layout/activity_side_menu.xml
@@ -28,15 +28,27 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/lime_border"
             android:drawableLeft="@drawable/preference"
+            android:drawablePadding="5dp"
+            android:gravity="center_vertical"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:text="Change preferences"
+            android:textSize="14sp"
             />
 
         <Button
             android:id="@+id/CalendarV"
-            android:layout_width="262dp"
-            android:layout_height="85dp"
+            android:layout_width="180dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/lime_border"
+            android:drawableLeft="@drawable/calendar"
+            android:drawablePadding="5dp"
+            android:gravity="center_vertical"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:text="Calendar"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="80dp"/>
+            android:textSize="14sp" />
+
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
