--- a/app/src/main/res/layout/activity_pref_changing.xml
+++ b/app/src/main/res/layout/activity_pref_changing.xml
@@ -52,8 +52,9 @@
                 android:layout_width="165dp"
                 android:layout_height="52dp"
                 android:layout_marginTop="1dp"
-                android:hint="   Country"
+                android:hint="Country"
                 android:drawableLeft="@drawable/country"
+                android:drawablePadding="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.157"
@@ -66,8 +67,9 @@
                 android:layout_width="165dp"
                 android:layout_height="52dp"
                 android:layout_marginTop="1dp"
-                android:hint="   Activity"
+                android:hint="Activity"
                 android:drawableLeft="@drawable/sport"
+                android:drawablePadding="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.157"
@@ -80,8 +82,9 @@
                 android:layout_width="165dp"
                 android:layout_height="52dp"
                 android:layout_marginTop="1dp"
-                android:hint="   Hobby"
+                android:hint="Hobby"
                 android:drawableLeft="@drawable/hobby"
+                android:drawablePadding="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.157"
